# local-knowledge-app

./: .gitignore  README.md  Requirements.txt  app.py  engine.py  ingestion.py  inspect_exports.sh  pipeline.sh  pyproject.toml  requirements.txt
common/: config.py  logging_setup.py  time_utils.py
config/: app.toml  confluence_page_property_rules.toml  import_scrape2md_example.toml  publish_confluence.toml  scraping_domain_mapping.toml
docs/: frontmatter_schema.md  terminology.md
llm/: __init__.py  base.py  ollama_provider.py  response_models.py
local_knowledge_app/: __init__.py
pipelines/: domain_mapping.py  scraping_transform.py
processing/: anythingllm_ingest.py  file_writer.py  frontmatter_parser.py  frontmatter_schema.py  manifest.py  markdown_chunker.py  markdown_normalizer.py  markdown_quality.py  processing_state.py  scrape2md_importer.py  simple_chunker.py
retrieval/: __init__.py  answer_executor.py  answer_pipeline.py  ask_pipeline.py  chunk_repository.py  citation_formatter.py  context_builder.py  embedding_provider.py  hybrid_search.py  keyword_search.py  prompt_builder.py  runtime_settings.py  source_formatter.py  vector_index.py  vector_search.py
scripts/: answer.py  ask.py  audit_report.py  build_vector_index.py  export_terminology_xlsx.py  file_type_analyzer.py  import_scrape2md_export.py  import_terminology_xlsx.py  init_knowledge_structure.py  inspect_exports.py  prepare_answer.py  report_unsupported_macros.py  reset_pipeline_state.py  review_terminology_candidates.py  run_ingest_anythingllm.py  run_ingestion.py  run_map_transformed_to_domains.py  search_chunks.py  (+7 more)
(+99 files in other folders)
