[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-knowledge-app"
version = "0.1.0"
description = "Local knowledge system"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "processing*", "sources*", "retrieval*"]
exclude = ["scripts*", "config*"]
