[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-knowledge-app"
version = "0.1.0"
description = "Local knowledge system"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
markitdown = [
    "markitdown>=0.0.1",
]

legacy-hf = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.0.0",
    "huggingface-hub>=0.0.0",
    "tokenizers>=0.0.0",
    "safetensors>=0.0.0",
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "processing*", "sources*", "retrieval*", "local_knowledge_app*"]
exclude = ["scripts*", "config*"]
